deployment.yaml
# Deployment with HA considerations

apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-deployment
spec:
  replicas: 1  # Increase replicas for HA
  selector:
    matchLabels:
      app: react-app-pod # deployment control pods, that have these name
  template:
    metadata:
      labels:
        app: react-app-pod # pod's name
    spec:
      containers:
        - name: react-app
          image: quynt/gitops01:1b197cacca0e22610e1c6695b66c30df1092bfb9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /  # Adjust path based on your health check endpoint
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "250Mi"
              cpu: "200m"
        - name: nifi-app
          image: quynt/nifi:1.23.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
