nifi-deployment.yaml

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: nifi-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nifi-app-pod
  template:
    metadata:
      labels:
        app: nifi-app-pod
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: nifi-container
        image: quynt/nifi:1.23.1
        ports:
        - containerPort: 9080
          name: http
