nifi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nifi-app-service
spec:
  type: LoadBalancer
  selector:
    app: nifi-app-pod
  ports:
    - port: 8443
      protocol: TCP
      targetPort: 8443
