service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
spec:
  type: LoadBalancer
  selector:
    app: react-app-pod
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
