ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
spec:
  rules:
  - host: "qq.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: react-app-service
            port:
              number: 80
