nifi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nifi-app-ingress
spec:
  rules:
  - host: "nifi.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nifi-app-service
            port:
              number: 9080
